--- a/mirrorui/stylus/coms/hr.styl
+++ b/mirrorui/stylus/coms/hr.styl
@@ -1,8 +1,7 @@
 ﻿// hr元素,偶尔用一下
 .line
-    height: 1px
-    background-color: var-gray-lt
     border: none
+    border-top:1px solid currentColor
     outline: none
     margin: 20px auto
     padding: 0
