--- a/mirrorui/stylus/coms/panel.styl
+++ b/mirrorui/stylus/coms/panel.styl
@@ -1,12 +1,9 @@
 ﻿// panel
 .panel
-    border: 1px solid var-gray-lt
-    padding: 4px
+    border: 1px solid $border-color
+    overflow: hidden
     &-head
-        background-color: inherit
-        overflow: hidden
-        padding: 10px
         text-align: center
+        border-bottom: 1px solid $border-color
     &-body
-        padding: 15px
-        background-color: inherit
+        padding: 4px
