--- a/mirrorui/stylus/variables/mediaquery.styl
+++ b/mirrorui/stylus/variables/mediaquery.styl
@@ -1,10 +1,9 @@
 ﻿// -媒体查询,各种屏幕设备宽度界定值-//
-
-// 手机(640px以下视为手机)
+// 手机分界(640px以下视为手机)
 $screen-phone = 640px
-// 小平板640以上,768px以下
+// 迷你平板 640px - 768px
 $screen-tablet = 768px
-// 大平板768以上,992px以下
-$screen-bigtablet = 992px
-// pc屏幕1200px以上
-$screen-pc = 1200px
+// 全尺寸平板 768px - 1024px
+$screen-bigtablet = 1024px
+// 桌面电脑屏幕1280px以上
+$screen-pc = 1280px
