--- a/mirrorui/stylus/base.styl
+++ b/mirrorui/stylus/base.styl
@@ -1,12 +1,12 @@
 ﻿// ================================
-// 全局样式基础设置
-// html,body,img,a标签在此设置
-// 部分元素重置reset在此设置
+// 全局样式基础设置,包含
+// 部分元素重置reset
+// html,body,img,a标签
+// css全局变量
 // ================================
 
 // =====================================================================
-// 如何多主题设置?可以用js修改css变量的值,实现多颜色主题
-// js设置css变量
+// js设置css变量(不使用css变量了)
 // document.body.style.setProperty('--primary', '#000000')
 // 获取变量值
 // document.body.style.getPropertyValue('--primary').trim() // '#000000'
@@ -20,87 +20,50 @@
 *, *::before, *::after
     box-sizing: border-box
 
-// 部分样式重置
+// 部分标记边距和补白重置
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td
     margin: 0
     padding: 0
 
-// ========================================
-// :root匹配文档根元素(html),设置css全局变量
-// 组件元素颜色都引用此变量色
-// ========================================
+// ========================
+// :root匹配文档根元素(html)
+// ========================
 :root
-    // 黑灰白色
-    --color-black: $black
-    --color-black-lt: $black-lt
-    --color-black-opa50: $black-opa50
-    --color-white: $white
-    --color-gray: $gray
-    --color-gray-lt: $gray-lt
-    --color-gray-dk: $gray-dk
-    // 主题色
-    --color-primary: $primary
-    --color-primary-lt: $primary-lt
-    --color-primary-dk: $primary-dk
-    --color-success: $success
-    --color-success-lt: $success-lt
-    --color-success-dk: $success-dk
-    --color-warning: $warning
-    --color-warning-lt: $warning-lt
-    --color-warning-dk: $warning-dk
-    --color-info: $info
-    --color-info-lt: $info-lt
-    --color-info-dk: $info-dk
-    --color-danger: $danger
-    --color-danger-lt: $danger-lt
-    --color-danger-dk: $danger-dk
-    // 字体大小和颜色
-    --font-size-sm: $font-size-sm
-    --font-size: $font-size
-    --font-size-md: $font-size-md
-    --font-size-lg: $font-size-lg
-    --font-size-xl: $font-size-xl
-    --font-size-xxl: $font-size-xxl
-    --font-size-xxxl: $font-size-xxxl
-    --font-color: var(--color-black-lt)    
-    // 默认背景色
-    --bg-color: var(--color-white)
+    // 用于主题色的全局css变量
+    --back-color:$white['0']// 背景色
+    --front-color:$black['1']// 前景色,字体颜色
+    --border-color:$gray['3']// 边框色
+// ====
+// html
+// ====
+// html    
 
-// ========================
-// html字体大小用于rem单位基准
-// ========================
-html
-    font-size: 100px
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
-
-// ===================================
-// body背景,颜色,行高,字体等设定在此处修改
-// ===================================
+// ===========================
+// body背景,颜色,行高,字体等设定
+// ===========================
 body
     font-family: 'Microsoft YaHei', -apple-system, BlinkMacSystemFont, sans-serif, '\5B8B\4F53'
-    font-size: var(--font-size)
-    color: var(--font-color)
-    background-color: var(--bg-color)
+    font-size: $font-size-base
 
-// ========
-// img标记
-// ========
+// ====================
+// img标记,块级,垂直居中
+// ====================
 img
+    @extend $ext-display-block
     vertical-align: middle
 // 自适应大小
 .img-autosize
-    display: block
     max-width: 100%
     height: auto
 // Rounded corners图片圆角
 .img-rounded
-    border-radius: 6px
+    border-radius: $cir-angle
 // Perfect circle 圆形图片
 .img-circle
     border-radius: 50%
 
-// ========
+// =====
 // a链接
-// ========
+// =====
 a
-    color: var(--font-color)
+    color: inherit
