--- a/mirrorui/stylus/coms/h1h6p.styl
+++ b/mirrorui/stylus/coms/h1h6p.styl
@@ -4,20 +4,20 @@ h1, h2, h3, h4, h5, h6
     font-weight: 600
     line-height: 1.1
     color: inherit
-h1, h2, h3, h4, h5, h6
+    background-color: inherit
     margin: 8px auto
 h1
-    font-size: calc(var(--font-size) + 26px)
+    font-size: $font-size-3xl
 h2
-    font-size: calc(var(--font-size) + 18px)
+    font-size: $font-size-2xl
 h3
-    font-size: calc(var(--font-size) + 14px)
+    font-size: $font-size-xl
 h4
-    font-size: calc(var(--font-size) + 10px)
+    font-size: $font-size-lg
 h5
-    font-size: calc(var(--font-size) + 6px)
+    font-size: $font-size-md
 h6
-    font-size: calc(var(--font-size) + 2px)
+    font-size: $font-size-base
 // p标记
 p
     margin: 0 0 16px
