--- a/mirrorui/stylus/coms/label.styl
+++ b/mirrorui/stylus/coms/label.styl
@@ -1,16 +1,9 @@
 ﻿// 标记 记号 颜色 四种大小 是否有边框 圆角或直角
 .label
-    display: inline-block
-    color: var-font-color
-    text-align: center
-    background-color: inherit
-    border: 1px solid var-gray
-    padding: 3px 6px
+    @extend $ext-inline-flex-vh-center
+    @extend $ext-border-1px
+    padding:2px .5em;
+    @extend $ext-border-cir-default
 // 圆角
 .label.cir
-    border-radius: 1em
-// 主题背景颜色 字都是白色
-for key, val in $themeColorsKV
-    .label.{key}
-        color: var-white
-        background-color: val[0]
+    border-radius: 1em;
