--- a/mirrorui/stylus/coms/mdirbar.styl
+++ b/mirrorui/stylus/coms/mdirbar.styl
@@ -1,23 +1,28 @@
 ﻿// 手机版顶部导航
+// 主题色变量
 .mdirbar
-    display: grid
+    --t-mdirbar-back-active:$gray['2']// 回退按钮点击色
+
+.mdirbar
+    @extend $ext-display-grid
     grid-template-columns: 15% auto 15%
     place-items: center
-    background-color: var-white
-    border-bottom: 1px solid var-gray-lt
-    user-select: none    
-    box-shadow: 0 2px 5px var-gray-lt
+    border-bottom: 1px solid $border-color
+    @extend $ext-user-select-none
 // 回退按钮
 .mdirbar .back
-    display: inline-block
-    width: 1em    
-    height: 1em    
-    border: 2px solid #333    
-    border-right: none    
-    border-top: none    
-    padding-left: 10px   
-    transform: rotate(45deg)    
-    margin: 0 auto   
+    @extend $ext-display-inline-block
+    width: 1em
+    height: 1em
+    border: 2px solid currentColor
+    border-right: none
+    border-top: none
+    padding-left: 10px
+    transform: rotate(45deg)
+    margin: 0 auto
     
 .mdirbar .back:active
-    border-color: orangered     
+    border-color: var(--t-mdirbar-back-active)
+
+{$theme-dark} .mdirbar
+    --t-mdirbar-back-active:$gray['6']// 回退按钮点击色
