--- a/mirrorui/stylus/coms/msgpanel.styl
+++ b/mirrorui/stylus/coms/msgpanel.styl
@@ -2,13 +2,5 @@
 // 标题和一段说明文字
 .msgpanel
     padding-left: 15px
-    color: var-font-color
-    border-bottom: 1px solid var-gray
-    border-top: 1px solid var-gray
-    border-right: 1px solid var-gray
-    border-left: 5px solid
-    border-left-color: var-gray-dk
-// 颜色
-for key, val in $themeColorsKV
-    .msgpanel.{key}
-        border-left-color: val[0]
+    border: 1px solid currentColor
+    border-left-width: 5px
