--- a/mirrorui/stylus/coms/tools.styl
+++ b/mirrorui/stylus/coms/tools.styl
@@ -1,120 +1,105 @@
-// 文本超出时,显示省略号.需要有宽度max-width 或者width
-.text-overflow
-    max-width: 100%
-    overflow: hidden
-    text-overflow: ellipsis
-    white-space: nowrap
-// 文字大小
-for key, val in $fontSizeKV
-    .text-{key}
-        font-size: val !important
-// 文本对齐
-.text-left
-    text-align: left !important
-.text-right
-    text-align: right !important
-.text-center
-    text-align: center !important
+//===========================================================
+// 工具样式,实现单一功能的样式,一般含有一条css属性,但也有多条的.
+//===========================================================
+//=======
+// 文本
+//=======
+for k, v in $fontSize-dict
+    .text-{k}
+        font-size: v
 // 文本段落首行缩进
 .text-in
     text-indent: 2em
-// 文字主题色
-for key, val in $themeColorsKV
-    .text-{key}
-        color: val[0] !important
-    .text-{key}-dk
-        color: val[1] !important
-    .text-{key}-lt
-        color: val[2] !important
-.text-white
-    color: var-white !important
-.text-gray
-    color: var-gray !important
-.text-gray-dk
-    color: var-gray-dk !important
-.text-gray-lt
-    color: var-gray-lt !important
-.text-black
-    color: var-black !important
-.text-black-lt
-    color: var-black-lt !important
-// 背景主题色
-for key, val in $themeColorsKV
-    .bg-{key}
-        background-color: val[0] !important
-    .bg-{key}-dk
-        background-color: val[1] !important
-    .bg-{key}-lt
-        background-color: val[2] !important
-.bg-white
-    background: var-white !important
-.bg-gray
-    background: var-gray !important
-.bg-gray-dk
-    background: var-gray-dk !important
-.bg-gray-lt
-    background: var-gray-lt !important
-.bg-black
-    background: var-black !important
-.bg-black-lt
-    background: var-black-lt !important
-.bg-black-opa50
-    background: var-black-opa50 !important
-// margin padding 固定设定便利类
-for size in range(5, 50, 5)
-    sizepx = size * 1px
-    .mg-{size}
-        margin: sizepx
-    .mg-tb-{size}
-        margin-top: sizepx
-        margin-bottom: sizepx
-    .mg-t-{size}
-        margin-top: sizepx
-    .mg-b-{size}
-        margin-bottom: sizepx
-    .mg-lr-{size}
-        margin-left: sizepx
-        margin-right: sizepx
-    .mg-l-{size}
-        margin-left: sizepx
-    .mg-r-{size}
-        margin-right: sizepx
-    .pd-{size}
-        padding: sizepx
-    .pd-tb-{size}
-        padding-top: sizepx
-        padding-bottom: sizepx
-    .pd-t-{size}
-        padding-top: sizepx
-    .pd-b-{size}
-        padding-bottom: sizepx
-    .pd-lr-{size}
-        padding-left: sizepx
-        padding-right: sizepx
-    .pd-l-{size}
-        padding-left: sizepx
-    .pd-r-{size}
-        padding-right: sizepx
+// 文本超出时,显示省略号
+.text-overflow
+    @extend $ext-text-overflow
+
+//===========
+// 边距和内补
+//===========
+// margin padding 
+// 10px-100px,步进10px
+margin-padding(10,100,5)
+// 1px-9px,1
+margin-padding(1,9,1)
+
+//===========
+// 边框,圆角
+//===========
+// 4边和上下左右
+.bd
+    border:1px solid $border-color
+    &-t
+        border-top:1px solid $border-color
+    &-b
+        border-bottom:1px solid $border-color
+    &-l
+        border-left:1px solid $border-color
+    &-r
+        border-right:1px solid $border-color
+// 边框圆角
+.bdr
+    border-radius:$cir-angle
+    // 上左
+    &-tl
+        border-top-left-radius:$cir-angle
+    // 上右
+    &-tr
+        border-top-right-radius:$cir-angle
+    // 下右
+    &-br
+        border-bottom-right-radius:$cir-angle
+    // 下左
+    &-bl
+        border-bottom-left-radius:$cir-angle
+
+//=======
+// 颜色
+//=======
+//  黑/白/灰/彩色
+for colorName,list in $colors-dict
+    for saturation,val in list
+        // 文字颜色
+        .text-{colorName}-{saturation}
+            color: val
+        // 背景颜色
+        .bg-{colorName}-{saturation}
+            background-color: val
+        // 边框颜色
+        .bd-{colorName}-{saturation}
+            border-color: val
+
+//===========
+// 布局和对齐
+//===========
+// 文本内容(子元素)对齐
+.text
+    &-left
+        text-align: left
+    &-right
+        text-align: right
+    &-center
+        text-align: center
 // margin 上下,左右auto居中
 .mg-lr-auto
     margin-left: auto
     margin-right: auto
 .mg-auto
     margin: auto
-// flex 布局时,让子元素在轴线上居中,用于父元素
+// 线性布局(flex)时,让子元素在轴线上居中,用于父元素
 .f-h-center
-    justify-content: center
+    @extend $ext-justify-center
 .f-v-center
-    align-items: center
+    @extend $ext-align-center
 // flex 布局时,让子元素在垂直轴线上居中,用于子元素
 .f-vs-center
     align-self: center
 
 // display:none block 隐藏|显示
 .d-none
-    display: none !important
+    @extend $ext-display-none
 .d-block
-    display: block !important
+    @extend $ext-display-block
 // display:none block 针对不同屏幕隐藏或者显示
 mediaquerydisplay(screen-type)
     .d-{screen-type}-none
@@ -124,12 +109,12 @@ mediaquerydisplay(screen-type)
 // 小屏幕 >640
 @media only screen and (min-width: $screen-phone)
     mediaquerydisplay(sm)
-// 小平板 > 768
+// 迷你平板 > 768
 @media only screen and (min-width: $screen-tablet)
     mediaquerydisplay(md)
-// 大平板   > 992
+// 全尺寸平板   > 1024
 @media only screen and (min-width: $screen-bigtablet)
     mediaquerydisplay(lg)
-// pc > 1200
+// 桌面电脑屏幕 > 1280
 @media only screen and (min-width: $screen-pc)
     mediaquerydisplay(xl)
