--- a/mirrorui/stylus/index.styl
+++ b/mirrorui/stylus/index.styl
@@ -4,19 +4,20 @@
 @import "variables/mediaquery"
 @import "variables/transition"
 @import "variables/cirangle"
+// 1.1 extend style item
+@import "function/extendclass"
 // 2.自定义函数
 @import "function/function"
 
 // 3.reset css和全局样式
 @import "base"
-// 3.1快捷工具样式
-@import "coms/tools"
+// 3.1主题
+@import "theme"
 // 4.布局
 @import "coms/grids"
 @import "coms/layoutline"
 // 5.显示
 @import "coms/h1h6p.styl"
-@import "coms/article"
 @import "coms/label.styl"
 @import "exts/kvpair"
 @import "coms/hr.styl"
@@ -30,6 +31,9 @@
 @import "coms/list"
 @import "coms/table.styl"
 @import "coms/form.styl"
+@import "coms/forminput.styl"
+@import "coms/formfile.styl"
+@import "coms/formcheck.styl"
 // 8.功能
 @import "coms/btn.styl"
 @import "coms/onoff"
@@ -44,3 +48,6 @@
 @import "coms/mdirbar"
 @import "exts/menubar"
 @import "coms/pagenum"
+
+// 工具样式原子化css
+@import "coms/tools"
